fix(blog): fix toc visible link jump in Chrome

--- a/packages/blog/src/styles/_desktop.scss
+++ b/packages/blog/src/styles/_desktop.scss
@@ -94,7 +94,6 @@ $asideWidth: calc(calc(100vw - 100%) / 2);
         }
         li.visible a {
           opacity: 0.9;
-          transform: translate(0.25ch);
         }
       }
     }
